@@ -10,7 +10,20 @@ public class YamlUtilitiesFacts
     public void Parse_HappyFlow()
     {
         // Arrange
-        const string yaml = "Value: val1";
+        const string yaml = "value: val1";
+
+        // Act
+        var result = YamlUtilities.Parse<TestModel>(yaml);
+
+        // Assert
+        Assert.AreEqual("val1", result.Value);
+    }
+
+    [TestMethod]
+    public void Parse_HappyFlow_ShouldHandleUnmappedFields()
+    {
+        // Arrange
+        const string yaml = "value: val1\nunmappedField: 123";
 
         // Act
         var result = YamlUtilities.Parse<TestModel>(yaml);
@@ -29,7 +42,7 @@ public class YamlUtilitiesFacts
         var result = YamlUtilities.Serialize(input);
 
         // Assert
-        Assert.AreEqual("Value: val1\n", result);
+        Assert.AreEqual("value: val1\n", result);
     }
 
     private class TestModel
