@@ -1,5 +1,6 @@
 ﻿using System.IO;
 using YamlDotNet.Serialization;
+using YamlDotNet.Serialization.NamingConventions;
 
 namespace HttPlaceholder.Common.Utilities;
 
@@ -14,21 +15,29 @@ public static class YamlUtilities
     /// <param name="input">The YAML string.</param>
     /// <typeparam name="TObject">The type the string should be deserialized into.</typeparam>
     /// <returns>The deserialized YAML string.</returns>
-    public static TObject Parse<TObject>(string input)
-    {
-        var reader = new StringReader(input);
-        var deserializer = new Deserializer();
-        return deserializer.Deserialize<TObject>(reader);
-    }
+    public static TObject Parse<TObject>(string input) => BuildDeserializer().Deserialize<TObject>(input);
 
     /// <summary>
     /// Serializes an object to YAML.
     /// </summary>
     /// <param name="input">The object to serialize.</param>
     /// <returns>The serialized YAML.</returns>
-    public static string Serialize(object input)
-    {
-        var serializer = new Serializer();
-        return serializer.Serialize(input);
-    }
+    public static string Serialize(object input) => BuildSerializer().Serialize(input);
+
+    /// <summary>
+    /// Builds a YAML deserializer.
+    /// </summary>
+    /// <returns>The YAML deserializer.</returns>
+    public static IDeserializer BuildDeserializer() =>
+        new DeserializerBuilder()
+            .WithNamingConvention(CamelCaseNamingConvention.Instance)
+            .IgnoreUnmatchedProperties()
+            .Build();
+
+    /// <summary>
+    /// Builds a YAML serializer.
+    /// </summary>
+    /// <returns>The YAML serializer.</returns>
+    public static ISerializer BuildSerializer() =>
+        new SerializerBuilder().WithNamingConvention(CamelCaseNamingConvention.Instance).Build();
 }
